[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "DeficitTracker"
version = "0.0.1"
authors = [ { name="Dylan Kelley", email="dkelle05@rams.shepherd.edu" }
]
description = "A Calorie Deficit Tracker"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]
dependencies = [
"tkinter", "messagebox"
]
[project.urls]
Homepage = "https://github.com/dmkelle1/CIS-314"