[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "rps"
version = "0.0.1"
authors = [ { name="Dylan Kelley", email="dkelle05@rams.shepherd.edu" }, {name = "Joey Williams", email="jwilli41@rams.shepherd.edu"}, {name = "Chase Bowers", email= "cbower03@rams.shepherd.edu"}
]
description = "A rock papers scissors game"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]
dependencies = [
"random",
]
[project.urls]
Homepage = "https://github.com/Jnwilli206/AdvCompPython"